🐛 Fix letter spacing

--- a/src/styles/components/_highlight-information.scss
+++ b/src/styles/components/_highlight-information.scss
@@ -68,7 +68,7 @@
 
     &--contains-subcontent {
         .highlight-information__footnote {
-            margin-top: .9375rem;
+            margin-top: 0;
         }
     }
 
